crates/usd-pyo3/tests/usdValidation/bin/usdchecker/testUsdChecker/bad/variants.usdc
version https://git-lfs.github.com/spec/v1
oid sha256:9081f6509db9973615b7c10c9bf7feba41cc35af78a02bb44969dc6993707e67
size 1131
